# desktop-cleaner

./: .gitignore  Cargo.toml  Makefile  README.md  desktop_cleaner.service
src/: main.rs
