[package]
name = "desktop-cleaner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "5.0.1"
trash = "4.1.1"
clap = { version = "4.0", features = ["derive"] }

[target.'cfg(windows)'.dependencies]
winapi =  { version = "0.3.9", features = ["winnt", "fileapi"] } 